--- a/knowledge/finance/qna.yaml
+++ b/knowledge/finance/qna.yaml
@@ -305,5 +305,5 @@ seed_examples:
 document:
   commit: 1e8f4ba
   patterns:
-  - SEIN_S_AR_Cash Application_V10.0.md
-  repo: https://github.ibm.com/InstructLab-BPOD-Test/knowledge-bpod-docs.git
+  - SEIN_S_AR_Cash_Application_V10.0.md
+  repo: git@github.ibm.com:InstructLab-BPOD-Test/knowledge-bpod-docs.git
